# kramlicious

./: .pre-commit-config.yaml  Taskfile.yml  cliff.toml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: auto-merge-l10n.yml  docs.yml  locale-sync.yml  publish.yml  pull-request-lint.yml  pull-requests.yml  release.yml  scheduled-checks.yml
dev/code-generation/: gen_py_pytest_data_paths.py  gen_py_schema_exports.py  gen_ts_locales.py  gen_ts_types.py
dev/code-generation/utils/: template.py
docker/: Dockerfile
docs/docs/contributors/developers-guide/: migration-guide.md
docs/docs/documentation/community-guide/: home-assistant.md
docs/docs/documentation/getting-started/: api-usage.md  features.md  roadmap.md  updating.md
docs/docs/overrides/: api.html  home.html
frontend/: eslint.config.mjs  nuxt.config.ts  package.json
frontend/assets/: main.css
frontend/components/Domain/: QueryFilterBuilder.vue  SearchFilter.vue
frontend/components/Domain/Cookbook/: CookbookEditor.vue  CookbookPage.vue
frontend/components/Domain/Household/: GroupMealPlanDayContextMenu.vue  GroupMealPlanRuleForm.vue  HouseholdPreferencesEditor.vue
frontend/components/Domain/Recipe/: RecipeActionMenu.vue  RecipeAssets.vue  RecipeCard.vue  (+21 more)
frontend/components/Layout/: DefaultLayout.vue
frontend/components/global/: AppLogo.vue  AutoForm.vue  BaseDialog.vue  ContextMenu.vue  CrudTable.vue  InputLabelType.vue  InputQuantity.vue  LanguageDialog.vue  RecipeJsonEditor.vue  SafeMarkdown.vue
frontend/composables/: use-default-activity.ts  use-global-i18n.ts  use-group-recipe-actions.ts  use-new-recipe-options.ts  use-query-filter-builder.ts  use-shopping-list-item-actions.ts  use-utils.test.ts  use-utils.ts  useMealieAuth.ts
frontend/composables/api/: api-client.ts
frontend/composables/recipe-page/: shared-state.ts  use-extract-ingredient-references.test.ts
frontend/composables/recipes/: use-recipe-ingredients.test.ts  use-recipe-ingredients.ts
frontend/composables/use-locales/: available-locales.ts  use-locales.ts
frontend/composables/use-users/: preferences.ts  user-ratings.ts
frontend/lang/messages/: af-ZA.json  ar-SA.json  bg-BG.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-GB.json  en-US.json  es-ES.json  et-EE.json  fi-FI.json  fr-BE.json  fr-CA.json  fr-FR.json  gl-ES.json  he-IL.json  hr-HR.json  hu-HU.json  is-IS.json  it-IT.json  ja-JP.json  ko-KR.json  lt-LT.json  lv-LV.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  (+2 more)
frontend/layouts/: admin.vue  basic.vue  blank.vue  default.vue  error.vue
frontend/lib/icons/: icons.ts
frontend/pages/: index.vue  login.vue
frontend/pages/admin/: backups.vue  setup.vue  site-settings.vue
frontend/pages/household/: index.vue
frontend/pages/register/: index.vue
frontend/pages/shopping-lists/: [id].vue  index.vue
frontend/plugins/: theme.ts
frontend/types/: auth.d.ts  components.d.ts
mealie/: app.py
mealie/alembic/versions/: 2025-09-10-19.21.48_1d9a002d7234_add_referenced_recipe_to_ingredients.py
mealie/core/: exceptions.py  release_checker.py
mealie/core/settings/: db_providers.py  settings.py
mealie/db/: db_setup.py
mealie/lang/: locale_config.py  providers.py
mealie/lang/messages/: ar-SA.json  bg-BG.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  en-US.json  es-ES.json  et-EE.json  fi-FI.json  fr-CA.json  fr-FR.json  hr-HR.json  hu-HU.json  is-IS.json  it-IT.json  ko-KR.json  pl-PL.json  pt-BR.json  pt-PT.json  ru-RU.json  sk-SK.json  sl-SI.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json
mealie/middleware/: locale_context.py
mealie/repos/: repository_factory.py  repository_generic.py  repository_recipes.py
mealie/routes/_base/: base_controllers.py
mealie/routes/admin/: admin_backups.py  admin_debug.py
mealie/routes/auth/: auth.py
mealie/routes/households/: controller_invitations.py
mealie/routes/media/: media_recipe.py
mealie/routes/organizers/: controller_categories.py
mealie/routes/recipe/: bulk_actions.py  recipe_crud_routes.py
mealie/routes/spa/: __init__.py
mealie/schema/cookbook/: cookbook.py
mealie/schema/group/: group_migration.py
mealie/schema/household/: group_recipe_action.py  webhook.py
mealie/schema/meal_plan/: new_meal.py  plan_rules.py
mealie/schema/openai/: __init__.py  _base.py  general.py  recipe.py  recipe_ingredient.py
mealie/schema/recipe/: recipe.py  recipe_bulk_actions.py  recipe_image_types.py  recipe_ingredient.py  recipe_scraper.py
mealie/schema/reports/: reports.py
mealie/schema/response/: __init__.py  pagination.py
mealie/scripts/: reprocess_images.py
mealie/services/backups_v2/: alchemy_exporter.py
mealie/services/email/: email_service.py
mealie/services/household_services/: shopping_lists.py
mealie/services/openai/: openai.py
mealie/services/parser_services/: _base.py  ingredient_parser.py
mealie/services/query_filter/: builder.py  keywords.py  operators.py
mealie/services/recipe/: recipe_bulk_service.py  recipe_service.py  template_service.py
mealie/services/scraper/: cleaner.py  scraped_extras.py  scraper.py  scraper_strategies.py
tests/e2e/docker/: docker-compose.yml
tests/fixtures/: fixture_users.py
tests/integration_tests/: test_spa.py
tests/integration_tests/user_group_tests/: test_group_seeder.py
tests/integration_tests/user_household_tests/: test_group_invitation.py  test_group_recipe_actions.py  test_group_shopping_lists.py
tests/integration_tests/user_recipe_tests/: test_recipe_create_from_image.py  test_recipe_cross_household.py  test_recipe_crud.py  test_recipe_image_assets.py  test_recipe_ingredients.py  test_recipe_owner.py
tests/unit_tests/: test_ingredient_parser.py  test_recipe_parser.py
tests/unit_tests/repository_tests/: test_pagination.py  test_query_filter_builder.py  test_recipe_repository.py
tests/unit_tests/schema_tests/: test_recipe.py
tests/unit_tests/services_tests/: test_openai_service.py
(+161 files in other folders)
